fixed overflow on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
   --fw-heading-medium: 500;
   --fw-heading-bold: 900;
 
-  --fs-regular: 1.4rem;
+  --fs-regular: 1.2rem;
   --fs-medium: 1.4rem;
   --fs-bold: 2.2rem;
   --fs-heading-regular: 1.6rem;
