--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -1,7 +1,7 @@
 .Contact-section {
     display: grid;
-    grid-template-columns: minmax(2em, 1fr) minmax(18em, 25em) minmax(10em, 25em) minmax(20em, 25em) minmax(2em, 1fr);
-    grid-template-rows: 7.7rem auto 4.1rem 1fr 1fr;
+    grid-template-columns: minmax(2em, 1fr) minmax(16em, 23em) minmax(8em, 19em) minmax(16em, 23em) minmax(2em, 1fr);
+    grid-template-rows: 7rem auto 4.1rem 1fr 1fr;
 
 }
 
@@ -15,9 +15,9 @@
     grid-column: 2;
     grid-row: 2;
     background-color: var(--secondary);
-    min-height: 33.8rem;
+    min-height: 32.8rem;
     width: 100%;
-    border-radius: 5rem;
+    border-radius: 4.3rem;
     text-align: center;
 }
 
@@ -46,13 +46,22 @@
     z-index: 2;
 }
 
+.contact-heading {
+    font-family: var(--ff-regular);
+    font-size: clamp(1.2rem, 3vw, 1.8rem);
+    font-weight: var(--fw-bold);
+}
+
+
 .contact-image {
     grid-column: 3/5;
     grid-row: 2;
     justify-self: center;
     align-self: baseline;
     z-index: 0;
+    width: clamp(60%, 4vw, 70%);
 }
+
 
 
 @media (max-width: 820px) {
@@ -61,7 +70,7 @@
         grid-column: 2/5;
         grid-row: 2;
         background-color: var(--secondary);
-        min-height: 48rem;
+        min-height: 38rem;
         width: 100%;
         border-radius: 5rem;
         text-align: center;
@@ -86,7 +95,6 @@
         z-index: 0;
         margin-top: 1rem;
         padding: 2rem;
-        width: 80%;
     }
 
     .write-me-text {
@@ -95,7 +103,7 @@
 
     .Contact-section {
         display: grid;
-        grid-template-columns: minmax(2em, 1fr) minmax(10em, 27em) minmax(5em, 27em) minmax(10em, 27em) minmax(2em, 1fr);
+        grid-template-columns: minmax(2em, 1fr) minmax(7em, 27em) minmax(5em, 27em) minmax(7em, 27em) minmax(2em, 1fr);
         grid-template-rows: 7.7rem auto 4.1rem 1fr 1fr;
 
     }
@@ -116,7 +124,7 @@
         grid-column: 2/5;
         grid-row: 2;
         background-color: var(--secondary);
-        min-height: 40rem;
+        min-height: 30rem;
         width: 100%;
     }
 }
@@ -126,7 +134,7 @@
         grid-column: 2/5;
         grid-row: 2;
         background-color: var(--secondary);
-        min-height: 30rem;
+        min-height: 24rem;
         width: 100%;
     }
 }
