--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -7,7 +7,8 @@
     min-height: 7.6rem;
     justify-content: space-between;
     align-items: center;
-    gap: 1rem;
+    gap: 0.5rem;
+    flex-wrap: wrap;
 }
 
 
@@ -21,4 +22,12 @@
 a:-webkit-any-link {
     color: var(--primary);
     text-decoration: none;
+}
+
+@media (max-width: 420px) {
+    .footer-container {
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
 }
